update tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,9 +5,6 @@ set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
-unbind C-o
-unbind C-i
-
 set -g base-index 1
 setw -g pane-base-index 1
 
@@ -17,10 +14,15 @@ bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r h resize-pane -L 5
-bind -r l resize-pane -R 5
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+bind -r Down resize-pane -D 5
+bind -r Up resize-pane -U 5
+bind -r Left resize-pane -L 5
+bind -r Right resize-pane -R 5
 
 bind -r m resize-pane -Z
 
@@ -33,6 +35,8 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 
 setw -g mouse on
 
+set-option -g focus-events on
+set-option -g escape-time 10
 set-option -g renumber-windows on
 set-option -g status-interval 5
 set-option -g automatic-rename on
