update sway config

--- a/.config/sway/sway-light.config
+++ b/.config/sway/sway-light.config
@@ -47,8 +47,8 @@ exec swayidle -w \
 #################################################################################
 
 ##############################E I/O configuration ###############################
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-exec seat seat0 xcursor_theme DMZ-White 24
+output * bg ~/.background/wallpaper.jpg fill
+exec gsettings set org.gnome.desktop.interface cursor-theme 'capitaine-cursors'
 input type:touchpad {
     dwt enabled
     tap enabled
@@ -80,23 +80,17 @@ bindsym $mod+$down focus down
 bindsym $mod+$up focus up
 bindsym $mod+$right focus right
 
-# Or use $mod+[up|down|left|right]
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+# Move windows around the screen
+bindsym $mod+Left move left
+bindsym $mod+Down move down
+bindsym $mod+Up move up
+bindsym $mod+Right move right
 
-# Move the focused window with the same, but add Shift
-bindsym $mod+Shift+$left move left
-bindsym $mod+Shift+$down move down
-bindsym $mod+Shift+$up move up
-bindsym $mod+Shift+$right move right
-
-# Ditto, with arrow keys
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+# Switch between workspaces
+bindsym $mod+Shift+$left workspace prev
+bindsym $mod+Shift+$right workspace next
+bindsym $mod+Shift+$up workspace prev_on_output
+bindsym $mod+Shift+$down workspace next_on_output
 
 # Switch to workspace
 bindsym $mod+1 workspace number 1
@@ -121,6 +115,10 @@ bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
+bindsym $mod+Shift+Left move container to workspace prev
+bindsym $mod+Shift+Right move container to workspace next
+bindsym $mod+Shift+Up move container to workspace prev_on_output
+bindsym $mod+Shift+Down move container to workspace next_on_output
 
 # Layout stuff
 bindsym $mod+b splith
