--- a/.config/waybar/waybar-dark.config
+++ b/.config/waybar/waybar-dark.config
@@ -141,7 +141,7 @@
         "critical-threshold": 80,
         // "format-critical": "{temperatureC}°C {icon}",
         "format": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""]
+        // "format-icons": ["", "", ""]
     },
 
     "backlight": {
