--- a/.config/waybar/waybar-light.config
+++ b/.config/waybar/waybar-light.config
@@ -6,7 +6,7 @@
     // "position": "bottom",
 
     // Waybar height (to be removed for auto height)
-    "height": 21,
+    "height": 20,
 
     // Waybar width
     // "width": 1280,
@@ -23,9 +23,9 @@
         "sway/window",
     ],
 
-    // "modules-center": [
-    //     "sway/window",
-    // ],
+    "modules-center": [
+       "clock",
+    ],
 
     "modules-right": [
         "idle_inhibitor",
@@ -37,7 +37,6 @@
         "backlight",
         "battery",
         "battery#bat2",
-        "clock",
         "tray",
     ],
 
@@ -58,15 +57,15 @@
         }
     },
 
-    // "keyboard-state": {
-    //     "numlock": true,
-    //     "capslock": true,
-    //     "format": "{name} {icon}",
-    //     "format-icons": {
-    //         "locked": "",
-    //         "unlocked": ""
-    //     }
-    // },
+    "keyboard-state": {
+        "numlock": true,
+        "capslock": true,
+        "format": "{name} {icon}",
+        "format-icons": {
+            "locked": "",
+            "unlocked": ""
+        }
+    },
 
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
@@ -80,32 +79,32 @@
         "tooltip-format": "{app}: {title}"
     },
 
-    // "mpd": {
-    //     "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
-    //     "format-disconnected": "Disconnected ",
-    //     "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-    //     "unknown-tag": "N/A",
-    //     "interval": 2,
-    //     "consume-icons": {
-    //         "on": " "
-    //     },
-    //     "random-icons": {
-    //         "off": "<span color=\"#f53c3c\"></span> ",
-    //         "on": " "
-    //     },
-    //     "repeat-icons": {
-    //         "on": " "
-    //     },
-    //     "single-icons": {
-    //         "on": "1 "
-    //     },
-    //     "state-icons": {
-    //         "paused": "",
-    //         "playing": ""
-    //     },
-    //     "tooltip-format": "MPD (connected)",
-    //     "tooltip-format-disconnected": "MPD (disconnected)"
-    // },
+    "mpd": {
+        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
+        "format-disconnected": "Disconnected ",
+        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
+        "unknown-tag": "N/A",
+        "interval": 2,
+        "consume-icons": {
+            "on": " "
+        },
+        "random-icons": {
+            "off": "<span color=\"#f53c3c\"></span> ",
+            "on": " "
+        },
+        "repeat-icons": {
+            "on": " "
+        },
+        "single-icons": {
+            "on": "1 "
+        },
+        "state-icons": {
+            "paused": "",
+            "playing": ""
+        },
+        "tooltip-format": "MPD (connected)",
+        "tooltip-format-disconnected": "MPD (disconnected)"
+    },
 
     "idle_inhibitor": {
         "format": "{icon}",
@@ -121,27 +120,46 @@
     },
 
     "clock": {
-        // "timezone": "America/New_York",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
+	    "format": "{:%b %d, %Y    %R %Z    (%A)}",
+	    "tooltip-format": "<tt><small>{calendar}</small></tt>",
+	    "calendar": {
+		    "mode"          : "month",
+		    "mode-mon-col"  : 3,
+		    "weeks-pos"     : "left",
+		    "on-scroll"     : 1,
+		    "on-click-right": "mode",
+		    "format": {
+			    "months":     "<span color='#ffead3'><b>{}</b></span>",
+			    "days":       "<span color='#ecc6d9'><b>{}</b></span>",
+			    "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
+			    "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+			    "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+		    }
+	    },
+	    "actions": {
+		    "on-click-right": "mode",
+		    "on-scroll-up": "shift_up",
+		    "on-scroll-down": "shift_down"
+	    }
     },
-
     "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
+	    "format": "{usage}% ",
+	    "tooltip": false
     },
 
     "memory": {
-        "format": "{}% "
+        "format": "{}% ",
+	"on-click": "gnome-system-monitor"
     },
 
     "temperature": {
         // "thermal-zone": 2,
         // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
         "critical-threshold": 80,
-        // "format-critical": "{temperatureC}°C {icon}",
+        "format-critical": "<span color=\"#f57d3c\">{temperatureC}°C {icon}</span>",
         "format": "{temperatureC}°C {icon}",
-        // "format-icons": ["", "", ""]
+        "format-icons": [""]
+        // "format-icons": ["🌫", "", "🗰"]
     },
 
     "backlight": {
@@ -154,12 +172,12 @@
 
     "battery": {
         "states": {
-            // "good": 95,
+            "good": 95,
             "warning": 30,
             "critical": 15
         },
         "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
+        "format-charging": "{capacity}% 🗲",
         "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}",
         // "format-good": "", // An empty format will hide the module
@@ -174,25 +192,25 @@
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
+        "format-ethernet": "{ipaddr}/{cidr} 🖧",
+        "tooltip-format": "{ifname} via {gwaddr}",
+        "format-linked": "{ifname} (No IP)",
         "format-disconnected": "Disconnected ⚠",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
 
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
-        "format": "{volume}% {icon} {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
+        "format": "{volume}% {icon}",
+        "format-bluetooth": "{volume}% {icon}",
+        "format-bluetooth-muted": "<span color=\"#f7120a\">{volume}% {icon}</span>",
+        "format-muted": "<span color=\"#f7120a\">{volume}% {icon}</span>",
         "format-source": "{volume}% ",
-        "format-source-muted": "",
+        "format-source-muted": "{volume}% ",
         "format-icons": {
             "headphone": "",
-            "hands-free": "",
-            "headset": "",
+            "hands-free": "🗣",
+            "headset": "✆",
             "phone": "",
             "portable": "",
             "car": "",
