update sway and waybar config

--- a/.config/sway/sway-dark.config
+++ b/.config/sway/sway-dark.config
@@ -68,6 +68,7 @@ bindsym $mod+d exec $menu
 # Change normal to inverse to use left mouse button for resizing and right
 # mouse button for dragging.
 floating_modifier $mod normal
+workspace_auto_back_and_forth no
 
 bindsym $mod+Shift+c reload
 
@@ -79,12 +80,22 @@ bindsym $mod+$left focus left
 bindsym $mod+$down focus down
 bindsym $mod+$up focus up
 bindsym $mod+$right focus right
+bindsym $mod+Alt+$left focus output left
+bindsym $mod+Alt+$right focus output right
+bindsym $mod+Alt+$up focus output up
+bindsym $mod+Alt+$down focus output down
 
 # Move windows around the screen
 bindsym $mod+Left move left
 bindsym $mod+Down move down
 bindsym $mod+Up move up
 bindsym $mod+Right move right
+
+# Move workspaces around the screen
+bindsym $mod+Alt+Left move workspace to output left
+bindsym $mod+Alt+Down move workspace to output down
+bindsym $mod+Alt+Up move workspace to output up
+bindsym $mod+Alt+Right move workspace to output right
 
 # Switch between workspaces
 bindsym $mod+Shift+$left workspace prev
@@ -119,6 +130,11 @@ bindsym $mod+Shift+Left move container to workspace prev
 bindsym $mod+Shift+Right move container to workspace next
 bindsym $mod+Shift+Up move container to workspace prev_on_output
 bindsym $mod+Shift+Down move container to workspace next_on_output
+
+bindsym $mod+Alt+Shift+Left move container to output left
+bindsym $mod+Alt+Shift+Right move container to output right
+bindsym $mod+Alt+Shift+Up move container to output up
+bindsym $mod+Alt+Shift+Down move container to output down
 
 # Layout stuff
 bindsym $mod+b splith
@@ -186,7 +202,7 @@ bar {
 ############################# Border configuration ##############################
 default_border normal 1
 default_floating_border normal 1
-titlebar_border_thickness 1
+titlebar_border_thickness 0
 titlebar_padding 2 3
 hide_edge_borders both
 #################################################################################
