--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -37,6 +37,7 @@ setw -g mouse on
 
 set-option -g focus-events on
 set-option -g escape-time 10
+set-option -g repeat-time 100
 set-option -g renumber-windows on
 set-option -g status-interval 5
 set-option -g automatic-rename on
