update configs for sway, waybar and systemd

--- a/.config/sway/sway-dark.config
+++ b/.config/sway/sway-dark.config
@@ -8,9 +8,10 @@ include /etc/sway/config-vars.d/*
 # Include the deafult configuration files for sway
 include /etc/sway/config.d/*
 
-exec systemctl --user stop pipekwire pipewire-media-session xdg-desktop-portal xdg-desktop-portal-wlr && \
-     systemctl --user start pipekwire pipewire-media-session xdg-desktop-portal xdg-desktop-portal-wlr
-exec gnome-keyring-daemon --start --components=secrets
+# exec systemctl --user stop pipekwire pipewire-media-session xdg-desktop-portal xdg-desktop-portal-wlr && \
+#      systemctl --user start pipekwire pipewire-media-session xdg-desktop-portal xdg-desktop-portal-wlr
+
+# exec gnome-keyring-daemon --start --components=secrets
 
 ################################### Variables ###################################
 # Logo key. Use Mod1 for Alt.
@@ -48,7 +49,6 @@ exec swayidle -w \
 
 ##############################E I/O configuration ###############################
 output * bg ~/.background/wallpaper.jpg fill
-exec gsettings set org.gnome.desktop.interface cursor-theme 'capitaine-cursors-light'
 input type:touchpad {
     dwt enabled
     tap enabled
@@ -153,12 +153,12 @@ bindsym $mod+minus scratchpad show
 bindsym $mod+r mode "resize"
 
 # Media controls
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
-bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
-bindsym XF86MonBrightnessUp exec brightnessctl set 5%+
+bindsym XF86AudioRaiseVolume exec wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 1%+
+bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
+bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindsym XF86AudioMicMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindsym XF86MonBrightnessDown exec brightnessctl set 1%-
+bindsym XF86MonBrightnessUp exec brightnessctl set 1%+
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
