--- a/.config/waybar/waybar-light.config
+++ b/.config/waybar/waybar-light.config
@@ -6,7 +6,7 @@
     // "position": "bottom",
 
     // Waybar height (to be removed for auto height)
-    "height": 20,
+    "height": 24,
 
     // Waybar width
     // "width": 1280,
@@ -166,8 +166,8 @@
         "device": "intel_backlight",
         "format": "{percent}% {icon}",
         "format-icons": ["", "", "", "", "", "", "", "", ""],
-        "on-scroll-up": "brightnessctl s +5%",
-        "on-scroll-down": "brightnessctl s 5%-"
+        "on-scroll-up": "brightnessctl s 1%+",
+        "on-scroll-down": "brightnessctl s 1%-"
     },
 
     "battery": {
