--- a/.config/sway/sway-dark.config
+++ b/.config/sway/sway-dark.config
@@ -203,15 +203,15 @@ bar {
 ############################# Border configuration ##############################
 default_border normal 1
 default_floating_border normal 1
-titlebar_border_thickness 0
+titlebar_border_thickness 1
 titlebar_padding 2 3
-hide_edge_borders both
+hide_edge_borders none #smart_no_gaps
 #################################################################################
 
 ############################## Window decorations ###############################
-client.focused_tab_title #b0b0b0 #323232 #ffffff
-client.focused #b0b0b0 #323232 #ffffff
-client.unfocused #323232 #b0b0b0 #000000
+client.focused_tab_title #5f5f5f #5f5f5f #ffffff
+client.focused #5f5f5f #5f5f5f #ffffff
+client.unfocused #5f5f5f #323232 #ffffff
 #################################################################################
 
 #############################E Gap configuration ################################
