--- a/.config/sway/sway-light.config
+++ b/.config/sway/sway-light.config
@@ -204,15 +204,15 @@ bar {
 ############################# Border configuration ##############################
 default_border normal 1
 default_floating_border normal 1
-titlebar_border_thickness 0
+titlebar_border_thickness 1
 titlebar_padding 2 3
-hide_edge_borders both
+hide_edge_borders none #smart_no_gaps
 #################################################################################
 
 ############################## Window decorations ###############################
-client.focused_tab_title #323232 #ffffff #323232
-client.focused #323232 #ffffff #323232
-client.unfocused #323232 #b0b0b0 #000000
+client.focused_tab_title #cdcdcd #cdcdcd #000000
+client.focused #cdcdcd #cdcdcd #000000
+client.unfocused #cdcdcd #ffffff #000000
 #################################################################################
 
 #############################E Gap configuration ################################
