--- a/.config/sway/sway-light.config
+++ b/.config/sway/sway-light.config
@@ -1,19 +1,25 @@
-xwayland enable
-
-font pango:Liberation Sans Regular 11
-
+################################## Import configs ##################################
 # Import default config variables
 include /etc/sway/config-vars.d/*
 
 # Include the deafult configuration files for sway
 include /etc/sway/config.d/*
+####################################################################################
+
+################################ Configure services ################################
+xwayland enable
 
 # exec systemctl --user stop pipekwire pipewire-media-session xdg-desktop-portal xdg-desktop-portal-wlr && \
 #      systemctl --user start pipekwire pipewire-media-session xdg-desktop-portal xdg-desktop-portal-wlr
 
 # exec gnome-keyring-daemon --start --components=secrets
+####################################################################################
 
-################################### Variables ###################################
+################################## Configure fonts #################################
+font pango:Liberation Sans Regular 11
+####################################################################################
+
+################################### Set Variables ##################################
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
 
@@ -37,32 +43,31 @@ set $term gnome-terminal
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 set $menu dmenu_path | dmenu | xargs swaymsg exec --
-#################################################################################
+####################################################################################
 
-############################## Idle configuration ###############################
+################################ Idle configuration ################################
 exec swayidle -w \
     timeout 300 'swaylock -f -c 000000' \
     timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
     before-sleep 'swaylock -f -c 000000'
 
-#################################################################################
+inhibit_idle fullscreen
+####################################################################################
 
-##############################E I/O configuration ###############################
-output * bg ~/.background/wallpaper.jpg fill
+################################# I/O configuration ################################
+# Configure display outputs
+output * bg /usr/share/backgrounds/f40/default/f40-01-day.png fill
 
+# Configure touchpad
 input type:touchpad {
     dwt enabled
     tap enabled
     natural_scroll enabled
     middle_emulation enabled
 }
-#################################################################################
+####################################################################################
 
-################################ Key Bindings ###################################
-bindsym $mod+Return exec $term
-bindsym $mod+Shift+q kill
-bindsym $mod+d exec $menu
-
+############################ Workspace and windw behavior ##########################
 # Drag floating windows by holding down $mod and left mouse button.
 # Resize them with right mouse button + $mod.
 # Despite the name, also works for non-floating windows.
@@ -70,7 +75,19 @@ bindsym $mod+d exec $menu
 # mouse button for dragging.
 floating_modifier $mod normal
 workspace_auto_back_and_forth no
+####################################################################################
 
+################################## Key Bindings ####################################
+# Launch terminal
+bindsym $mod+Return exec $term
+
+# Close application
+bindsym $mod+Shift+q kill
+
+# Launch menu
+bindsym $mod+d exec $menu
+
+# Reload sway configuration
 bindsym $mod+Shift+c reload
 
 # Exit sway (logs you out of your Wayland session)
@@ -175,9 +192,8 @@ bindsym $mod+shift+s exec grimshot copy area "$(slurp)" $psf
 
 # Screen locking
 bindsym Alt+l exec swaylock --ignore-empty-password --show-failed-attempts --color 1e1e1e
-#################################################################################
 
-############################## Resizing Container ###############################
+# Resize Container
 mode "resize" {
     bindsym $left resize shrink width 10px
     bindsym $down resize grow height 10px
@@ -192,32 +208,32 @@ mode "resize" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-#################################################################################
+####################################################################################
 
-############################### Statusbar Config ################################
+################################# Statusbar Config #################################
 bar {
     position top
     swaybar_command waybar
 }
-#################################################################################
+####################################################################################
 
-############################# Border configuration ##############################
+############################### Border configuration ###############################
 default_border normal 1
 default_floating_border normal 1
 titlebar_border_thickness 1
 titlebar_padding 2 3
-hide_edge_borders none #smart_no_gaps
-#################################################################################
+hide_edge_borders none
+####################################################################################
 
-############################## Window decorations ###############################
+################################ Window decorations ################################
 client.focused_tab_title #cdcdcd #cdcdcd #000000
 client.focused #cdcdcd #cdcdcd #000000
 client.unfocused #cdcdcd #ffffff #000000
-#################################################################################
+####################################################################################
 
-#############################E Gap configuration ################################
+################################ Gap configuration #################################
 #gaps inner 6
 #gaps outer -2
-#################################################################################
+####################################################################################
 
 exec "systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP"
