--- a/.config/sway/sway-light.config
+++ b/.config/sway/sway-light.config
@@ -51,7 +51,7 @@ exec swayidle -w \
     timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
     before-sleep 'swaylock -f -c 000000'
 
-inhibit_idle fullscreen
+# inhibit_idle fullscreen
 ####################################################################################
 
 ################################# I/O configuration ################################
