--- a/.config/sway/sway-light.config
+++ b/.config/sway/sway-light.config
@@ -57,6 +57,9 @@ exec swayidle -w \
 ################################# I/O configuration ################################
 # Configure display outputs
 output * bg /usr/share/backgrounds/f40/default/f40-01-day.png fill
+output eDP-1 {
+    mode 1920x1200@60.00Hz
+}
 
 # Configure touchpad
 input type:touchpad {
