update sway and waybar configuration

--- a/.config/sway/sway-dark.config
+++ b/.config/sway/sway-dark.config
@@ -137,6 +137,8 @@ bindsym $mod+8 workspace number 8
 bindsym $mod+9 workspace number 9
 bindsym $mod+0 workspace number 10
 
+bindsym $mod+n exec sway workspace $(swaymsg -t get_workspaces -r | echo $(( $(python3 -c "import sys,json;print(json.load(sys.stdin)[-1]['num'])") + 1)) )
+
 # Move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number 1
 bindsym $mod+Shift+2 move container to workspace number 2
@@ -224,7 +226,7 @@ bar {
 default_border normal 1
 default_floating_border normal 1
 titlebar_border_thickness 1
-titlebar_padding 2 3
+titlebar_padding 2 2
 hide_edge_borders none #smart_no_gaps
 ####################################################################################
 
