--- a/.config/sway/sway-light.config
+++ b/.config/sway/sway-light.config
@@ -90,6 +90,9 @@ bindsym $mod+Shift+q kill
 # Launch menu
 bindsym $mod+d exec $menu
 
+# Launch app selector
+bindsym $mod+Shift+A exec wofi --show drun
+
 # Reload sway configuration
 bindsym $mod+Shift+c reload
 
