--- a/.config/waybar/waybar-dark.config
+++ b/.config/waybar/waybar-dark.config
@@ -43,7 +43,7 @@
     // Modules configuration
     "sway/workspaces": {
         "disable-scroll": true,
-        "all-outputs": true,
+        "all-outputs": false,
         "format": "{name}: {icon}",
         "format-icons": {
             // "1": "",
